// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-blHHSb jWUilC"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-gFtjaa ckiSqi"
    >
      <img
        class="sc-ikngxL boPwCI"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-hRgSog gwVEDd"
    >
      <a
        class="sc-jwaPLR gajeQq"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-jwaPLR gajeQq"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-jwaPLR gajeQq"
        href="/leaderboard"
      >
        Leaderboard
      </a>
      <a
        class="sc-jwaPLR gajeQq"
        href="/referrals"
      >
        referrals
      </a>
      <button
        class="sc-fAUdSK dztAJe"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-dntaoT hkozYz"
      >
        <button
          class="sc-fAUdSK lchHyL"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-hRgSog gwVEDd"
>
  <a
    class="sc-jwaPLR gajeQq"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-jwaPLR gajeQq"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-jwaPLR gajeQq"
    href="/leaderboard"
  >
    Leaderboard
  </a>
  <a
    class="sc-jwaPLR gajeQq"
    href="/referrals"
  >
    referrals
  </a>
  <button
    class="sc-fAUdSK dztAJe"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-dntaoT hkozYz"
  >
    <button
      class="sc-fAUdSK lchHyL"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
